[gd_scene load_steps=2 format=3 uid="uid://bdah8exfauvgw"]

[ext_resource type="Script" uid="uid://0qpyhmy4uhnf" path="res://crossshot/scripts/scenes/developer_menu.gd" id="1_xukld"]

[node name="developer_menu" type="Node2D"]
script = ExtResource("1_xukld")

[node name="main_menu" type="Button" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 155.0
offset_bottom = 39.0
text = "MAIN_MENU"
metadata/_edit_use_anchors_ = true

[node name="level_1" type="Button" parent="."]
offset_left = 8.0
offset_top = 48.0
offset_right = 155.0
offset_bottom = 79.0
text = "LEVEL_1"
metadata/_edit_use_anchors_ = true

[node name="boss_2_test" type="Button" parent="."]
offset_left = 8.0
offset_top = 88.0
offset_right = 155.0
offset_bottom = 119.0
text = "BOSS_2_TEST"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="boss_2_test" to="." method="_on_boss_2_test_pressed"]
